fix provider UI overflowing

--- a/TeamFourmen/src/main/resources/static/css/movie/movie-detail.css
+++ b/TeamFourmen/src/main/resources/static/css/movie/movie-detail.css
@@ -817,14 +817,12 @@
 
 
 	/* provider 관련 */
-.movie-provider-logo-container {
-    width: 100%;
-    
-}
 
 .movie-provider-logo-container {
     width: 100%;
-    display: flex;        
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 10px;     
 }
 
 .div-provider-each {
